[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Matt Pruitt <37597019+mhpruitt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
